[package]
build = 'build.rs'
edition = '2021'
name = 'tsol-asm'
version = '1.10.1'

[dependencies]
anyhow = '1.0'
clap = { features = [ 'derive' ], version = '4.6' }
hex = '0.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
serde = { features = [ 'derive' ], version = '1.0' }
serde_json = '1.0'
thiserror = "2.0"

tycho-types = "0.3.2"
tycho-vm = "0.3.3"

[dev-dependencies]
similar = '2.7'
